Repository 들 이름 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,9 @@ spring:
         default_batch_size: 1000
   messages:
     basename: i18n/exception, i18n/validation
+
+logging:
+  level:
+    com.y2gcoder.blog: debug
+    org.hibernate.SQL: info
+    org.hibernate.type.descriptor.sql: trace
